# transmission

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  REFACTORING_SUMMARY.md  code_style.sh
Transmission.xcodeproj/: project.pbxproj
cmake/: FindTURBOJPEG.cmake  TrMacros.cmake
docs/: Building-Transmission.md  DjVu-to-PDF-Conversion.md  Editing-Configuration-Files.md  Editing-XIB-Files.md  Human-Friendly-Titles.md  Media-Categories.md  Piece-Download-Priority.md  Pieces-Bar.md  Window-Auto-Sizing.md
gtk/: Actions.cc  Application.cc  CMakeLists.txt  DetailsDialog.cc  FileList.cc  InspectorPiecesView.cc  InspectorPiecesView.h  MainWindow.cc  PiecesProgressBar.cc  PiecesProgressBar.h  Prefs.cc  PrefsDialog.cc  Session.cc  Torrent.cc  Torrent.h  TorrentCellRenderer.cc  Utils.cc  Utils.h  transmission-ui.xml
libtransmission/: CMakeLists.txt  announcer.cc  announcer.h  api-compat.cc  bitfield.cc  bitfield.h  file-posix.cc  fmt.h  interned-string.h  peer-io.cc  peer-mgr-wishlist.cc  peer-mgr-wishlist.h  peer-mgr.cc  peer-mgr.h  peer-msgs.cc  quark.cc  quark.h  resume.cc  resume.h  rpcimpl.cc  serializer.cc  session-api.cc  session-bandwidth-groups.cc  session-bandwidth-groups.h  session-disk-space.cc  session-disk-space.h  session-load.cc  session-mediators.h  session.cc  session.h  torrent-announce.cc  torrent-consecutive-progress.cc  torrent-ctor.h  torrent-error.cc  torrent-error.h  torrent-files.cc  torrent-files.h  torrent-helpers.h  torrent-lifecycle.cc  torrent-location.cc  (+20 more)
macosx/: AboutWindow.xib  AddWindowController.mm  CMakeLists.txt  Controller+AutoImport.mm  Controller+DockLinks.mm  Controller+DragDrop.mm  Controller+FilterSort.mm  Controller+MenuValidation.mm  Controller+MissingDataLaunch.mm  Controller+Notifications.mm  Controller+OpenAdd.mm  Controller+OutlineView.mm  Controller+QuickLook.mm  (+93 more)
tests/macosx/: CMakeLists.txt  IINAWatchHelper-test.mm  NSStringAdditions-test.mm  PlayButtonStateBuilder-test.mm  TorrentPlayable-regression-test.mm
(+36 files in other folders)
